fix(core): close arena-id path traversal and the shutdown/OOM failure modes
Security and stability pass over the PulseGames engine (audit 2026-07-27).

- WorldService: template ids must match [a-z0-9_-]{1,32} and the resolved
  target is canonical-path checked against plugins/PulseGames/maps before any
  recursive delete. "/pulse setup start spleef .." and a blueprint with
  "arena-id": "../../../world" previously deleted the plugin data folder.
  Both entry points (ArenaSetupManager, MapBuilder) reject bad ids up front.
- WorldService: templates are copied to a sibling .tmp and moved into place,
  so a failed capture no longer destroys the only copy of a map.
- Shutdown: unloadAndDelete deletes synchronously when the plugin is already
  disabled instead of throwing IllegalPluginAccessException, shutdownAll
  catches per instance, and onDisable guards the flushes. Stats and Pulse
  Tokens were being discarded on every restart with a live game.
- ShapeService: every primitive projects its block count against
  limits.max-shape-blocks and aborts with a message before looping.
- Cuboid: volume capped at construction, blocks() is now a lazy view;
  ArenaSetupManager requires both wand corners (and every point command) in
  the session world.
- LobbyService: isLobbyWorld resolves through lobbyWorld() so it can't
  disagree with where players are actually sent - a mismatched lobby.world
  (prod is "Arcade", the default config says "world") silently disabled hub
  block protection, damage cancellation and void safety. Warns when the
  configured world is missing.
- LobbyService: giveMenuItem no longer clears the inventory it was just
  handed back, so the game snapshot/restore actually survives.
- MapBuilder: build lock released via endBuild() on every path plus a stale
  timestamp, so one failed build no longer blocks builds until restart.
- LocUtil/MapBuilder: serialize with Locale.ROOT - a comma-decimal JVM
  corrupted every saved coordinate.
- KitService: kits parse in